k8s/mascotas-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mascotas-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: mascotas
  template:
    metadata:
      labels:
        component: mascotas
    spec:
      containers:
        - name: auth
          image: josefvivas/fmp-mascotas
          ports:
            - containerPort: 4000
