k8s/auth-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: auth
  ports:
    - port: 4001
      targetPort: 4001
