k8s/event-bus-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: event-bus-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: event-bus
  ports:
    - port: 4002
      targetPort: 4002
