k8s/mascotas-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mascotas-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: mascotas
  ports:
    - port: 4000
      targetPort: 4000
