k8s/qr-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qr-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: qr
  ports:
    - port: 4003
      targetPort: 4003
