k8s/uploader-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uploader-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: uploader
  ports:
    - port: 4004
      targetPort: 4004
