k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: web-cluster-ip-service
                port:
                  number: 3000
          - path: /api-auth/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-cluster-ip-service
                port:
                  number: 4001
          - path: /api-event-bus/?(.*)
            pathType: Prefix
            backend:
              service:
                name: event-bus-cluster-ip-service
                port:
                  number: 4002
          - path: /api-mascotas/?(.*)
            pathType: Prefix
            backend:
              service:
                name: mascotas-cluster-ip-service
                port:
                  number: 4000
          - path: /api-qr/?(.*)
            pathType: Prefix
            backend:
              service:
                name: qr-cluster-ip-service
                port:
                  number: 4003
          - path: /api-uploader/?(.*)
            pathType: Prefix
            backend:
              service:
                name: uploader-cluster-ip-service
                port:
                  number: 4004
